[gd_scene load_steps=15 format=4 uid="uid://dfvgxat2wvto4"]

[ext_resource type="Script" uid="uid://dhwhsvx4lq8mv" path="res://optins_menu.gd" id="1_ena10"]
[ext_resource type="Texture2D" uid="uid://ddbq7nkju7b6u" path="res://UI/Screenshot 2025-08-25 134120.png" id="3_ena10"]
[ext_resource type="FontFile" uid="uid://d4k7cee63u7q4" path="res://UI/PixelOperator8-Bold.ttf" id="4_wntjw"]
[ext_resource type="Script" uid="uid://imiwarhkjjfk" path="res://options_button.gd" id="5_ena10"]
[ext_resource type="FontFile" uid="uid://b2xfwqk1bld4i" path="res://UI/PixelOperator8.ttf" id="5_il0vt"]

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_55en5"]
data = PackedByteArray("//vUZAAP8AAAaQAAAAgAAA0gAAABAAABpAAAACAAADSAAAAETEFNRTMuMTAwVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVUAFaLkXktSaEvIIOcdwvQuCFqx+8Z2R2ymiZReXWdVlSRpZopAEsAV0JDS45bkDzvY3rnOY88Unn9b5ejJJHBrPlyqXJ4pBoDExH3n4hJYCcFiSrEkFjvpMzETehwWhLPYI1uSTsNtEYaq9HNUjc3wfFTpLUtsUUDsA46RDO3IctwGftaZs8rvOCwJNEKhGQGNfnGCaBQVDUabi+0ZjUtkMik1HjACiaCYoNDFC16mDc4Ijsqs15mJRFsSqZUGCyprpFMgD0Ok0ziCy6Xip1iKnTkUcYCyZoLTmGpDBwo02JNg4wtulQp25TqPG/TN2WNbZg0VeScpd4rKB0AKHUAWmzB0YefxhaPKIyJDN2WLnWAWSpygunoylxnda8zVTlbi4VvuZDTMU9i3IGOGsAFoZY6Ahusax5PxSMV+g1f51HigzgLmSgsydEMH4r4bEqVUlUEapNSmK0py8FzLYb7Ez7bHrk6Z2R+3tUFibUUSEQ4oGixQIDoqMrgCVyyRvY8rzPa57TGJpUFUCXqFi4OAJjsAbvAUgeNylnKwM7qTEMt+pg0VXK9mKrPWosdTBjbzO/MZv43NR5OVM4vQXASXUyWqy5VUKgAERKGQtDM0AMWFLcLBvBE38duC5dAjltIU7VWR9IgYsDVgfprq9laVJpWKnduMQ+7DI07BQCCg//vUZP+OCeFyIJH4zHEojeSCP0zOY6G8vAe/BcRtN1fhnGYxw8cCEAKFpCNLfR930g2XSfGGGRo6EokKljLFybccEGa4oZEmDAyO7GGywZH5LHn1dppK5kxS9RMQGigQPLiKVt0gmJUtHT3OfRtceHZ6WxIHsehJH4YAfDsyND9Y3mVdjcXsNwU6MGGJmXNedXhKwt6373P9RCEFgbiCIkuZB0shg3DEP9RivtPEYzfEWOwstG1COg0KgSIimb3uAyxQwBAaC5b9l5C9EYlltuDmo9lny17B3qXQ/cchlY880cAjUGBRHiiMNImLUvb7GG4OKkXDUUdBUjLMXbn76lCmkmUrZvYZQux5UE615IqRyF0ITEcIZR7LloptPy3KIxEFAG01BqCctGlYxCWORBL9FuEBkUl7I1N421+asytU6jrFmWQa09Ixfq660oS3MYyyZaNt5XEl0JaK8t0sSTEf1+8KjWHhTKAUFF2hozgZbWXHkjiRhMsvWXkQ0i0dUDh5jZadf7c2zpjwtpCxJzcqcSbcOVIzl66mUljTC0uFFDEBqF/gEAgAAhIVAZNp/2lrmOwtrYiCNtFIZDRhkHRuNPJIn2KhZ0wjLiKD5ymXTs68SAB3EvHtjc8wxg6AsIHJK9JHgQBgqL5nKAhpr39fzt+9PPyY6ndoOG8+FiXwxitMhEcBPTHJinlGOq76NhcosDGwEYKpMXJu0bqAFM6lk8b/bMaRMR8WWghBS4IIRYk8tBopdo1EizyFkuVTMcszTQUnKt5UtHOqZtsXAU9I5fMSzOchQEGSBV3m7FDa52bk6lBmmpJJWRhO8yTTLLBR8atCAIFIPqXPAxbOy2YwECQAcpDcxVy53nO///KBkc34R7gxSwweXWe8v2LGeuf+qtqes2sAYgBpIblkvp6SnpK8ogtrRkLHSipU1GjvLCWfksSxDEf7/NKr3hIUQVcXsdfiWZmahgQACAQJlJQxIPKq222yWTyQDQsCQDRS3lVBXJa5yiyLYTMz+lEh//vUZB8MtbZtuoGMNnCzbbdVMY3Olg22+ESxMcrZOB7AxLH5IcgZEst5RuBaTKsHCzkgNFHcvQhIWOd0Nuxyix0QwCEypmfxlQsehKBzJ4lmZ/HpgYOnb/wHDiQwMHDgEB019l8lk95hLGsK4jqjgmdd/pmky3Lb+dLDY9gmFat0/KiyFediW8Zn9vzQG4Wg5Mf//+GcexAABnCMTACAAwJBoXwNmcJLQW3h4KCc+Bo7OnZAXKPyIzQ3yUJCLr0kQBEQgaFiZNDz2TOm4nJ7F7sHCIcBhiwSy3Ldx3W53Y4dq8WdeV5ZLeMHnxGx5Mzq8Q0F31R5zCI30qXxvztCc1ZEVyfcQCJyyOaTJ2WwntcqLVbb7fzEvR6HYDxHjltWYGC2giZAfF9XPnB5TqLOmZnkZyZ027g5lvXNyw7x5v1kuIOem6jBF/DGCFjgCeCUDKgAvASNgq+aM2lEZubZjCofIDTJk5q7yw4qYsYHnHcRVOzw9h9Qdk8f7lwHxSOELPKUxWXmSRDXIjUqojQmRHKcvzUgbVDNiydl8etBQUhE2owvFgSuPKjlT8IYZJUxIk4dXRNk2fRCDAX+3dos9k0lhPy6BDkB+oMG64w3JLz5AaLCvbnWrhbzmuXBTb1JSwAi+PXX/w6QtAeHVAoGGPSAnal/AuG3z2DCt34SSQCENxKlCil0iCyvDpAqPSHSljwwLsQOIUnCs6BdLqFEJIz3ntEEzPQDTaSAZRdCRMCgqmNoDCSkCEbidDrAJlyVc3ApJNUqya4hInWICcZSwsiSx6cnSS8nwxu6Y+hrliNdtyyw6s6U4gN3vM46cJSiXHCyj1AQc66MjzQlLqdp9GWjhHN43Cz80YLpAZNkBxg4cks1Oyd0mxXWDgX+7bchhBMsOUDmebfpGG985v5HBQfD45MwODoEkhFKS2RtMVpas9GaM+9f49d3xN31vPtCmpIyUis6LYELixpX0dWJaPGOyqeSSVYiu6V1XkCFtebRwhkcwakUIW0wmQlj677j//vURCSA1PdtQenpHtK9biewJMmEGGm+9iY9OBsVOF7Elib4FZk0Sknour7OGIsrrreb8WEysIo28RsyIeW5clyC8pRrPWZU+clTaaAjgysSqTRJIDxectosWaaNTPfvV5Y+HBV1QrjY5VIR22ZsYNEZScIp5KD40TSxolTIrEZ8QOQgVQmkZK2DyCAh6GyWcSIkguiqsU0fKoDCixZDi0xc8caRh4ppLAHDLMB45MSTUEQrKi5hkPigqy0oSmVKQFy6QrWKzSIF0hQvMKGSdsQTEKMvAUIiMlLXoKOkMnihxyNAYJi66zzBQUmUKPSAZYFAwTDKOTtwcRERNSQVRHMIwdZIBc2ymTi0R7wHAXTmMF9xEw8LEhMGEiVKZAD81ESpC55KUVLgyqrFpGLDhYibIFF3NNwIA4ROWHxwuiCiPWj8uzRFkIqQvUnSI/O1yGykVnjb5cURrKIomVR1AazijoCMhqnJDE0Dq6NWKaIKBdFE7M8QhaepkgFEzwRDTCIlNN4S4uMsmyMSuaZZ7zwWJyXisYBqR3UcEZhCSj2EBEDghoMk6ECgFYLB4ySPUcDooxldU89Dhs4JkpiXqmjTBbFlmCJsUCFGotNAgF0iM+LVhLIEoiAJjZIStIVxxE0Jz9yNEhGJorFF0XVCi5daYGIhaxI0hMEGpmERoHzpAftDMOE5ogE4KxIEaMqJ8mhRgibBVmZ5pGbMDgeiEtPqnwkJjpe03xIKlj5W+8ljafWnB2PYWvAiwOxbefPzMJTvzllIetFVY1ZccIachnD5VQiWTbWO0NJxmdob672/M6vqESRLrtDxlJAphxawubLlYcRwGBy6O6GYozA8V5Af42gRuKCGMDsvHElSBpJyFdkVHqS0RizwPRtFg3IfeTQE8EiytjIaQgK2JSfk8FTk1gcPqoAvBMmBAbkmoIYAN3SIroh2OvA7Gs00EKQ0Wu0MJq5Srg9FBJCMtQ15+RVUim24UnFyRi4sFObqUitIE8tG+aCC6Beaz7xFEPuf//vURCAI9EhwwTBpNVCXzhfgGMmuEgXFAkMk04JjOJ+AYyW4Nth0vaEotJzQ57pyfKNl3ezO0047FPmKjSJ+SQbT0FGdWk6wok8l7yFUnvp8L2ZMr6S1mpd3E+K35JXjZ1m8t2zHjem/7+crUCVp9CC0ArTRokiMNSZaKSA/lspwY0IcmXBqaB/aQmzQS9TctOgAyBhyBFM+5HC3GBnmJ+XB4Ny0UHvTimS50amkdVUXDXxcGnXWIz3w+VHCiJmICpJHjM9TsrUzagZkgHymQn05LcnDzCTopyTWfqA7+teVtp6WUVanBAYVYJvb2DrK91CbCEubWvECZKiY2QrksnLULRCiupASXLgXgmtWFbUx2K3W9nqqb3xGiE2UjEuaVm9yRVto6NoIhZmu87cHkDaHm1cIV5n3nqmojigirMKqtCNFbLEii6rOORq0sPIIagXdlEyRnrcLzxGwlpUqMrHefVaiGhsiyVYuugS1l/7kXhusX97a79tDHHIY+W2GY6anxpcpuaTLlRF0JSh/87HlT6UW5E1C1munpKREh2ISUUQetQmLowy000XUXCIoYlG/10CEGJ0cQo0CqtTQR1LB75klHQWRTiqitpcKVNh0ZMlYyYlU6zFF2UXkhkmshlqBqLowTOJMKvTELjy7EhzHsjb4GPZs4K5xqE1JbCdY1HTyNpA6s8+rWpvHl39/5DiCUpomMfazJQn1g2iOmLTYpaamLsLrlE2qbJEVcB4VRNmK5jnmFcEgUC44IEb6oRCkHgK+bDkbDYnj/NFYPct5DUShRyVyzH6lhjEmL++u2l0ay2m6kSSKEWLRvD/bRbyZIYO5Oj0kJNBVHuikKNwvJfj+PpYO54nBFGdXp9cMj8zolUwuC/opyIJKdb1iJwdB5l3TxsmaZhbl4/jiXFy3ImpNG5sQtDHjCZNEqcaXemKfiiZiYF4Qw/mU8DxevXzi9kmIgvx+RUMfMxlkggscE/nBfKE7TxRqtOpCp2pOI8yGQ5jiJVIMtXl0PQYS//vURGkICB1xuwnseZDp7ge6JeysVY3G/MSxNsLuuR7AxLJ4JEmKClpyMJlSkzqoE6UKMoPWc7mcSENxeFOyc+U+P0SM4EYWQ/n7Eu3xbyFkubEErNiBAinG2khyRCIiEFic+gMtnSM7aoWZGwcLQVpdQRK6u+bj2U5DHjgXUvpVQm14rB8BIRIxoibDPGeIYR1TrOvSdJvDMkxkY4q1SH6WwcyGkiiuBTBJVfyHOKqdJFAM49IpYuRNiDOzyLGoh9phQpRDGx6dJPFkd7hcbyYakNT9I0p2mY7gsfBGO5xqHWA8TqiQPiskaGikQQNjty0kjxAbBELEYJjqO4Gw3Kqo3N2FbRmXQAgiEwxVVQz4g4W9wguL5gXHQYMNr8RC1ItpGTzW8eurUa1cmcgHISSbA6elr6VKRzA2Ykw4ckCdSAL3jFPJtmgi/ozRpGhKsMpvujkS0QA9y7GahLCQtJ7ImmSht56SqTikgFwsIRgaktc8VoPUGJDOlMIQmGHZ6fNsjTFJOLNI6UIHXGTYlQJNs6mwtJzfYg7Fe89Keamu3JMmTJYz8kbKiz2oK5TMjmoqw5NdK5uSUQqEzUKWUiu6mkmYFlYelUCNpJ2kq4gRRaQwpFqRIQnoJ7qkttqTpocZQsHWTpspiewckpd8y9SJpNEtFcYFp52NUK4irE0tWRYKTIpRHMNy8J20jJmyBVUiH2yNcR2oQLTVewZAdAQTOkzayZK+NzOkBoiseQsyFMIrrqWGF1IxZMWTCYuQsvJUL37ZgkbEut6LX06bzlNQQDK1pPCaYK8bPomr2LSlPCnZaVFMSF2natYUzwyKjqtX5uUtSKlR2plujIdoZryA4cIQaHq09s7S1HCxXi2yW4rkNo0Q23HizUrHw+us3aawcVdHYvWIqEkXlDR55/BEFjosIyIKxMLoDZesQjt3eJpmuYjLycuHymq5NyWIzjUKFj7REcJ5+TTh18/c/DktoByrcaxq/jiu2KLMHuxqfrlxy8Pq1ItVLsStLpPl//vURCwABh1xvYUlgADFLiexpLAAF2IHBBhngArqwKCbDPABY8w6vO4jdDSwsfJ2cr0ySH17BcgJSEwWrofOkhJROX4FlavmuGq1Ius6vMEMuFWx8u9eV7tL43SHdcXj1YwiUMnpdUnhy2SiIUy+e84vHlWr83JWuFI9OgxcL459GsJ6o7XmLx5Z0qLCS63xAB5FMRwQF4kx54PRplBIO1VqDx41YoORUPiZQtnT2k2pIXXXrDozMCT4bEnie8d8dtFt9gsvpF66JsygqdPrh3SwvLHhLYSnsCS7pzrTDUGHK9edJC4tVayoWccvlht8lslJYdIjk+YHBdAyVF1hWsTlcPauRxtpIYcPYWYlRgkL76M0o8OFimZD0eMnD6tNzTxdOXCtGORz65HGkkuUPmUJD1QoV5AhHFyySLnrDhfVl+MvEpcvXvjouXrnlyzVrBaTF/UjTnTKctwoWWbgdB5rGata3HcpntHl33zEwwQHLxoe7Pr6lvvNmqNujPPSPD3fFIi7pApEWEWS+ebCtpNSNTb1reRIwtiAIQlT/GIXCkWt42rUtmSlMPsuoifMt7HeXjw41WOC9iRYfeWa25yiv5oVNMks0GtrWa4bukeDGhW3JqDWlYmo7dnD+PEi317Z/1vPtCgMt3mGzdr5iM+P/////////3C922M8vv0zJv/////////+lpdgo7JkAAkYAAAAAsD0gjphgiwC6RRGPtaRcz5zEmh6s0Mqneb061LZXt+ft9I33aI12Y10USQy3CTcvzH1iB9rcBjv1fFZMNUSWR79R4kmlezqw5DIdv8waQ9Ua5aQockBnzSI8iljQggiEHJe+Y1vEvnLBDjV1/fUdl7z/er4+bWrB3PHh4fYpizXT3+YkOP5/vVvmu8S/fpaWeH4FKeLb//////////x42rzTwYWqZx///////////B/BmjhqgANx+P/D6vIgEBou4Nf+w3E+eeLgN/6KG4m2Pv/ovGnXAEEJ3/hdftKtK8BB8Cwznb/OjlC//vURBqABe9e0G4fYAC9ayodwuQAFtl5Pfz9gArhrub/n7AAANykfE0lowW1laLEd52/7fUwSsEgNfCVir0OaNjTGWzDo8t3+Z2/QEBAAiUYQQGTBBh4Gjm01aS5dGXwJgAhG7NPf13++qOVxu2/j+RQtA+uVB71MyR/QV/e957z/82mWMOd5n3OnkM1rn3KWfV/LP////////gezf/9fvP+65Ta7/6xsct0l3gAGw222r2epzFA0G2Gf+hkfAQCGFv1lVvUv81D7YQaDDLhNzpMacBPkypimrto6PVSrbm0c0j0K2cDx8p+zDsni+FPlLLYWARENgR+YHQCQAbRIsjD0arZ/lVh+3SO5LFyAggDMG6eGBw01qsncftZqNPPjY+xeuTksQPRDAw7T001L4fBSDWdXYz9UsCpRc+9/4c/D2orraBK7ct7XZZFFjw1SU038lYTGoa////////+kz///7HPz/7/ceMCbzN7KEAyMAL/8XmbWxaXlSrhHRaQPoQwtSdCvvtIWm3qWzS7pk9Qgnm5BRvE4zOoecmDr27nabueXd47s7z5zvKZuQWBTNVM5ogWk9pMQLLdmBXcikel8TjT6UkvoP/fPuU0aHA0x4XFjkxANCAlK1+ZN3LLv/zf/////+tVnS7ArLp/dyvWx/////////VHZ/ca1DNJS1p23OUs5Md//////+my3zKtjjr62eq+qaU/S5ZU1pcIuczMtAbAIof/30+z07Oynaf+jIOEkbOeDE3DcepRYTcvpplA9m8pjjXITBMpkUalU1Ut289asc/t/Uox5XlOEwIQIATx+z8YQUky6JCG4al1NMWM+6/9SitlLseSqtQpUmCCJlj+a0FhDaQAgQCuLxlTZN3bf7lE5cgCHKa9hWhp3os1mUykBAXJ6pB+X8/Dn///////V5uzh9BTa/WXO/hvP//////fccceY448+5WqY4zdPWjGFQiby8yjAkAACf/1zeDhjgGMUCIwWAjCwYGBGPIoycHjTNLPI284//vURBMABSNZ0PuaLHC0C7ofcyicFkFlQ/XaAArlpud+u7AACWzRT4NYhU1NFDfwuMq3OG9NKJWfLIEfsucriMv39PL5hd7ly+5DFFE43nRU+de3qq/8P408cfhRcWXpGCAysJGniglh7j6sapLdS9Xv6xr9r5WMK70r9S1T0e2m1jXMHAJFFOhGrqPvOQeMBn//q/lEw/oyTnRv//9Xc5xAgPW5n/iBIAAFP//Xmn4MDjEyCNR4DJpGFg0OCMrRZp4+Gicqf56Zy8Rm2J8ZjQxxSFBTtmXUSaXPYKQYKAF3NfZZphiqosG8SzVyOwiABhGguPAEgp3gpLWG6e5Yib9xyB4hYldMo2aqhtWmEIrSpk7Ey/81OXb9e/+eeW//ue//fV8sdX7Pzm8Sg4Bp/CFi56V/CV2UDUIuGiFm7/9f9+b4ivVjnrdY///Iv/eE/gdeSQcTQTVVNQJACAAFP/6sWXjHQfHggMEgJIQCUwTXMEwxMRRNMW3TOLRYMAQXLIizSQC4ICS4DhvAbpCompWExEJAbbiChJuiRUmhBERskmcKDDGh0IfiMmbmxqWhlAQABAxXMy6bDnhqkMihY8US+YCvB+wyRZNUi8ssE8cKaJlUZk2fpmpwmi2ZE+gtZdJ00KrOmizVdqW04Xkjr/MX9zLpKNkkqTZkpP/X+bt0j6S2c1N6ZMAVdV0wIFAAAyf/+9KYZgCMKVatiXhMBokDZjOU5lyQ5rT657KhiWSUJhwOYSUHProWfzNi5K6MZvKKhYEHDEwB536jNiFPkpFZa7IHvxR22GtNcGPXKOzxsrHHHb91akfcEEC5jxmKBipoLhyNKBW3Cv14jLnJ5y1Vlv2cK+H/LaaPwRFH6pfxxlTSoXLscpdNW7l3n/+rvP7+FLv///3l3///1Tf/3u3bOt1efctY0uvptgr/BoC4GYmJiSICEEMDQQAAFFYpoJdVLsq1HTIRWEQrYQkYWyKt4tkVL13DhbLbJxCzBQ20lTwgBKG02X0ChjnRdwUi//vURB8ABh5a0n5nIADBaTnNzWgAFvE3S/mNAALeJaj/MaAA24OhectPNhr7NyUPstCzZvQRZ85mHacCDBMarWBK3OhMRPDX1ofq37NULhsulkom35q9pe3KL34qyrKVSzFr9SOww6a4YvQays8iGef5/bt7wlksiKEuBpju35o/sbw///6lSlr///zBz5ZNtgZJX7nN0f////////8/92P////+9n2X8l999wAAEB2MASMxWBCAK0E3VULEBgKIz8YDsRNGKX2SpyJ2OsxreSxwi8/InBVSOeFJBIKMCAcZIHArriIa09LcIHlzHPLxLSfNPtlDRkEhMHWlAlFIHGus0WmzcaBgpQfuGJIDDhBUw8ZmgLZbNb0hEf3P1SVDg4zEhpO2KPl24xqimSQOma/ssr0tuWUL/wfL3PbvItxF9ZVa53dWann7qXsuV9QPAC+3n1Sewz//////5ZvHPtSx//AliVzUs+3OQ05lkaM5kQMhABJAJkxugaqf3UlCIphB+0MkQKyHFm7Y4CgRKNnBMHhpVBsVt0S8ZROgAADTIDro4AEvilaEYcAZy4QyBU9EHDMLNXlOy+hIKY84kPI+YoSGNa1NKxCQTyiV6dY0mPbuunMNalnLUOSSZhdDI7TIuXbVLKNRKxVvX3FwlDv0NPBLGGbxzfyjmO4c7/xzmqB5cf98Gh55RJdco/dXcK/+v5T8//v/+E/h///MO0uMq1VEyAiZIAAjIQCSSkVZQB+NVVKwouLAZMOHSOE7IcmAot3UWphmz+oOx9a0pTFfwGDhZC/bQgiXIWdFumowGrYgHL5Mpd9uSIZgT5sQkbgiVCOuDnjuzcwIKI11kNasABDK8I7cUVR+mq0B5wwxB8q0ujWUosQBZYDR3ZVajN+rPXdvq+1/84ZmrcskVylxjXdRyi3+pqW9y1rOteezKjp3SkUznuWxTt3kdnO2u9q4TFyAsavM7SoJqLslIwAAAD3/tukUn4ZAsp6qMeT4RQmpcR0MpoXCkTRkRIey//vURBKCJOpYUf8+gACgakov7GQAEzktReyh/EKEqGi8/L6RsfHPIwDFiANfZAoFE2m5GEAJ8uEAIIakDDI4NiggAA2CRNo4yJlYyNjEmjV0CIG5dMCoaH3eQ42PO6JNlkrmLpKmySHdZdKpADjUU9aTmBME4surv90ki8Zk+s//pmaaJ1Jyu6V0TJFZugs6XHS1/6zJJD556A/6gzY7UZiAABNPj/tTbGQskYmo0MiAI24AyFZKZxVGlKGWP+5b/VJqk5nbmUcRkkzyQU3JqteH7F2Nu/D7+K4BSgH0CCWAyW1b7rCxbylDwKdF6G0ilPUpJfG5fclEslD/xfu7f1KmHbFjnK+qmGUYnLHP3//+f4XY3L+6/+/vWvzrxt+5///Wf//65qpb59TD9V6fl2nlcv7///7y5/3OW+hNztEsIAVv/+cqT62UoIkOgaYzkQEESDRiqCni0GjUofq1BNmZsv4nSmSZnyTUZoYdsUtLyNRp/lDRRA52Y1lD3McbOVbmMeVvRvVDAUE89lkYPhsVPAYG6/iGnuIBcDUos2PMWtbaYTelSZiqK1f8b/hN8Y1g5TqzrM2LxfmbvTma9sM2ab/3Tfkf1AKpKsGRwVOoW5pEj4MhMR2CjGEm4/ziuQOoTgwBPDyRuRkLS4WhCTqURPmuIvsW3ysUJ8oYj607Ku500qnrL6v65JIAaO5wgORGrdn6t6zCyy5AHUE+062UhT2yrsyIpNMr45X0rlR7CRydfaYi3HMeRLlKpUrTUV9nWJE8gicrBdkFHmr9ZrLlLDBBykgFqZd/f34sLbEN41kcy6tb5ZYWH2WwynKHJr/NdefBQLoIqaQDUAAACc4/7Dpl41N03UxQqcpC3ICCfghcAghx2vyuAH4j2GMekGciTSTcEqnClgOSKScu7pLGNWll8IBhCZeCpqwqV1Me5Y9/CjWOYAApI2Y1yX1svP7ZqaRpObbMNpLVU20zSTbMbm1LqHEiVYv55TVSr5BmRKQSjcfd74xpJhLwyNJb//vUREQAJLhSznsbTTCVCbn/bYbiU8ktN+2wesJ5pud9pJtIcJtUTBtVg8ZrdVV7/HsTCJRDBSAAAACuP+hcNU7fwSm+husIxCDZWh2SbftaECQ3G4ftbt08N2mROUQg5mcYBjSESibht+JZjb1lOuev8OD1CIqu9x56GH8fyB/96RQBiEQaZT267czK5mv/HmQHwN5O0oxSf+p2wTCu/TLf41MEQAAeoe9vfGT0wSWf9mz/u/g9gg2hiCAeUJOBCcJnk3lMgaUHpXQAQgAAKTo/5oWAUUi60WMLDUvDBB0wwmMrMUhQYEEQgkFKpcpcymCH/aC/UtgqBoKLNGNTJ0w2GCK5oDlE9DTsxyHsWHLmaEnzKtxx7odjkbhBs0Xx90miIboB0Ujd0ch5cVCSHRNuTTL4h2dYPEExcOyzpyVB1iSpI5Qm6+0zMnK12Vs7W1tCiZ7VVsVvZu/NjExyVDxTTBHPBoJtYQEUgCnH/4YISKVOwgFlDmrjKGxCZOASuoeERdr0hJQDyrDOYxZnr8PC7SFUOEQYw0k9zcWMEwJpMdaa4Mgp7jvUztMbMANaOhqwWCmXKBJ1N8bBIjZGRKAoZEiIqGQJAKBkUixqTKQqNilDnIgJbke8JTACHOxuYcEy52+iRKZqmr05yQKN381Gnc3MefvkwBBVJNgMv3CX5h1E1RI0AmACAS5B/zZjoUmIXkMOHAEqiROj8KjwlxgIvEVYbepFsjCQ1CtgTE2UQJQUb8vVFSUpIikx43NSQyzjh8j8MShwrjhQqU+u0sBUKt53snawoFVF5TEEvgEHYRK4Tjl1cVVrC1KpslUpgMJJM6MF0WpUbD8FwKAy9MJqNRUelZufNk4wyjkkjrAKUeZLgl/RKlOknxRd8rYYgwwGgYACAAAACd4/7Kr0pBEZET3WPZIHfpwALV2xVQNrXZAxbNK593jUsQafR00MWHI9hww8mMBoXLNbZrKJ7J2v23Ve6tTsPXlCow3SLuFH3niqhBKhshDSYIRSE/jo//vURH2AJOhFyOtsNpKhKgmPZYbSFAD7MazhjYqEKOX9rCWxmvqytblvLEby9wiEWFkNYmockSKKAwUDCtIiQkwas1gk9G9L6OWOPPJahINdDU2Uc2+iTrOH53Hsy5WqvBf2OekXEg/DIZYEZl/w/50HOO5InSQtA1yLhn0m8YWWMso/bwGFkrOnyoo1HYu9rjS2eetma8l7wA6b6RuBBIiUSdKYSzXWZ6pU+u3iaS1puq+FlugTxePh8ckYmng4taWyQpNy+PBdwsCOiLwkny8RF7BJNriQfsnxg6kTvcYD2mhMyY+iI6AuJJkWmUiHA2eH6xSjdXHLUNB6rsc4tJ1undRGw/2LQCACAAF7j9XWmoYmESEJE0x8DG2lFmgNoS+ROOyPeURBHiqCv4XWRPAzVZiqMmKWyTJcRUwopGZRlB1+bMZgJfK7Ekms1F4stuS+Qw1PPE/bygkeLegGE4EkIqtChQCppCWXIlYJ1KfGW1mlVvGKkESF2rXkgWHiX/CyKcmtuO5JFLfGkQyYeia0qw9Ck+0peRCyrBnLS1aaHPd5Lf1kMipAABCBZwiRiEOxt/jAAsM6zQxEEDBIDM5Osz4azAAAMJs856hjM4PDAAKgMCAdkkNqYuvDsErsTpAqTAguZ+afI8PBTOYgrcvRXUbZKwhXUfZTyN3bEp5HmpRVnMRgVwoGZij6gQDnnhn12vYu6Blyvk7Uii3HJgBnUbBGAqgKlyWB/Ty09NKs00nntLUONUrcclca/SW1fv0QubSUAAABfVq68Dc3QDgMRCBtXEDkYhBwIMG1OYqCGBqp2a0EI8AKpqupH+UBf2My1uDikBOOGT7mWi61JfHnGuvZEO0pXGMuQBaIE7gOcSz3SHTQGJ9eMbA+k+lyBrrUsiAM5bkIAT2aXWGYQ3S4lCcZRybtQrLNIls6JE1+3lTz+7z/7F4EXMVduJK+v3AELCrTMJAAUiaH5mcxHaIOZQAI6GjIJ4M9hgwKEjA0rOfqIxuDo25JgMBNSlk1//vURKuAROE7RLOZTUCMh+jJbem0EqjzDK48XFJcJGDBzC7REoJjCBaTBhgVmsAiYAARpA/CQGguYppRMT1mVUP1X8TBW85M7TU0ugmW5c/b+s1UoTZJhRQ2rTQa23h/Iwt8Wz6FGixvrO1LMtEjiYdzd1NI7t0Nv+jRnnFPiyHVgsDI8Tcg//+UNUFjMDC9yhGRTBOCN7pswmRDCAWM9rQ4CqjLYwMB9c/KiDGYOnwsAU2YZnGBOs7b4EwDL+mABed4Hk8aqQxEaZiGn+hqZhmdgyD5TDNgdkRvs/epb1NnyU87KWEuoSKEBodfM4vLZSljLiGHaaskb1MK5iF16p1831NIsY9GzY5bJtx9EsPPTdDpd582iXR7J/6PaV9JK6sARAAA+0AtgMLgRR0CwbmIwCGh4+CQfFwTAkTBoyhUJArKZosPhjEBbDpZafl2ntLpsChAQDYcDxgSMZqmYZgaGxoCFph0ACVcghlyp2GoEiknf/BFsLiCxD+0tTtamy5BcpXUMgA9JgUDKfep4Slrq+Fc9Ha0Ndig665X6mV6wDp4gRder9p3LORTLC3L/M7e/yyW6NuIoK0aeM5+sN9xZ6GasXHhmaN30Ekoe/////uLwBi8NXSEATEofCgATCILxCGBomcBg6CZgCBJg0A48DgjBIwc580OIIxWA9HqJr+cWD4qgKaUqUwbB4BBkBBeM9RREiONcxTHjsfVtIbjEIr8npdVkkrMvUXuZrP4633Xf/kXLqFvRSw2Xy2I0NCoPnZ3HG7V7fvWcq2FHcl1nP/m55saAFs9hvLd5d19zBosIhNLF0W8FBc65SsxJHL5bbrmLlvuSOJivPnDZn8PP18X//////BZSJ6WM+Fhrg9+AuEJhoJKt8TEYAgYGi2YIl84yCMSEVPN1Hkgl4oMWCdxsYOB0WDEEAWbulkYLiiYPGSWAJZQ5b6Qa28Vcu1uLLMCgJASUUz9Lfofx3/0NJIAqIYwIpkUy2bAivNcmqq1BeXNMLP+9AtPmCjx//vURO8J9aVfQDOsPzC0yyfgdyu4FiF8/i7ldpLOLJ8B3LbgcChCHsr1MqMKUz/BxRQ0R8rci8yHgukqOmW5c2Hdky81TK0ztwTqyjQgq5UXZRc5zr///////+U79U6raxIbcAwjM8OAFuRUGMwIINGV3X/AQamAIJGLnNnBgbgwDUWlsLop5fRIsuq4YYEgWAmDjOp3jDcQzVJvzCoH2WKlcab/nv9UuSRo5wBjz7a4XaKx3v/ptJodWQrMHo4+QaOgerfFo9Ty+rGo/CoOlUvxsYSfLHK3Tx6USK8x2HqOQwfLh2EoaeJMWJF4vG3jzI/zEussOJQ9CnEc/8qJ47RjnRzFMew59Q9CVJQav///gnxYFYIS0ABCZVAJhILQzPEAPMnmhLrZABwcIAaDzN1ROkG8xgHkN2ANcg+YwRxmZIFAkABJjTif8xGSFJwDMUF81foqR9offige9v2pgEEMCJhIhjUM8mNYUtvC9IGEtYBQYYqFGnhbtTKXTOq7P4YlUNvDBsYfuWyaHoxJ6dyJus5cSfqD1V0lHu3nVjI6fR0OOx4aoaKsg6VOc003QgPEJQycc/84bG/coG4+f//U9v/AiXShjDzmDBPA4C8RUUzD4LigJkyVkAoES1Ri5cp7ATAUAiBntcWNwQtBWCLLsGhWHgjMGDON5hnMJQWMpRGDlTpWmyKX4Xo/BNuaZrfAoXKXt7LYC1VgSbl9hnjzSpGtUwNBAybEAt2gTLqZVFCyMaEt7O0Nl0y0U9H8NjRqbRcQ0gMBLtF9XpzqVBT51Z44zejAybpiiEJvs2UoaMa1ozIcn2pSdzvQQNjZ1EIPpEJFSmG44LW6BxM//////8jtCwAImCMogANWoYGMCvcbFEEAk2oNIgYWeMGN5iNe1GnsKfSal+EhRWXGgIBwLEgkYIjRnBVmCA4HJoshK5JhlBjN24M2gBksDiICig8R5d5kbkz0hrxrbz0DqMXU8kUYGCpgcOPv6xZS+knuQh2IzuDY09tLH97jVDuZ//vURPYA9ZRcP7ubPHC/qyewdevkFnlY/U1xccLnrJ8B1h+YoPlzUm7LRmJRrlQ1JmRV33L+EmRUMNx/dXqjvP/pGKA67MSxp+Pk3P4i8aZvf/bpIBKv///8WreoOsco3dMExZfyXEAbkIJQA/DRFJoDjDxfzqYRQECLZ20lDty5fREAUTe0BAEYPgUYIn0ZvkkAimMnAaMPQCfF2tTNnuM1Lo9SywRA87MtyuU07Syn36guHoujqiQKgKBhyQQq+EUoGJQdQkOyRF50PrZ+YHr8CkpJEJYWg/cSoFNWmLxc6T5YbmsByJbtkFSdPSXjU1mBfglMLaCWY+X4lhXMhFLhnFygEQuIgmLKGglFxbKDUiX///EAMlOKsMDhgcKRkAKLOsvp2AKPggAGTVYbLBQYZ4cjMTjVNKU8WyJSt0MZgQw7GBPVlBHNUhoWGtJdim51/rlBnH6VZQCC0/KI1Hn3fGORS3IKaNtMXcIwSOgwwqA4rTCQTVBdJSsRUyiWCunWFgpls2bKhfEocSYlCdZIl6uZNSCDU/WWTogaIDBXODcpjY0YEpFMByYKmOwJCc0VXgwCFwSQSFPygEe6BoZjtGAdTGZfzoSIYpff/6hYjep6xDRhEHz9QQQBSGEq2uqZXiAcwsG07YA4FAYoPGIYqSjqaj4N1MBBwcHGKxQbnGgiht9gClaWy+rNUVyXyuApQ2eqCQ5rkml9NMxmmjM5FXGcijijcRwRMBEU7VnwXIf1MSarrk/I4/QU1vU3A9Wai0ctw/DqfUgf+P2MKWnL7XvnyWORm+Gj0tr9qxNlavx7HwsDyqmFs6Pl+/tZvdteiH1Q5vW2s4cQJmJmWyY5O+siXz+LK3KSucXxsdiQwQCikgoiog0MWIBQYBNy6NrPaSYrDmBiCc0khvUY1EIHsw2gBVyYDXG3riuTZi8uzKIzKLD62lctBZm4L2pjiBjn34hGZE7d+mlVmCr20Zn8LNgMF6qCMAQRg+EA4TDgnGUUBAVW6BlYjR2YYBhl//vURPQM1dNWPYOMbzC+a4fAd2yOFWFO+k3hNoLHL5+JzKaYAogSFXVoiRNlTFJ4cIvTCCiCIpZQyLgMU1G3RFTBHM0SP/RLWdLmIpixgvietlQqoWhOf///bkfy7D5wdFw9mzCYXeyLsBMYASBIAgagQzMAHg68SRoINfhyMSqlhqV4tLeKaAotOgmIaLx6NBoEbik/qHdTEpoYnRykFEA7lJFp0ray1S5F6sediC4eiBEUVQyyjA36EcmyAZoQ6isaS1ck9RIPM8oREZgGd5InBjl1kGf/s04xW9NB7MoGCEvpVDZNLEybqEu/9RgcC0xVB4ar/1w+Xckj4t00brDAaJUYMG/RL2RP/3PLZ//ZumAhnuAXldiA6caS5kNOm+j/m2nj9wIK0MIuWLUOOPKq18mFChIzy0VGEEMWZQyuKVUU3AUth+H3jh1kgwMHjcKlM7Fpa/zuVZfKqWToTFTJ4GDFyx2CEHac5Ek9G6AUX82BAToqpG1ZTUCAWRyDRdRYd0VshH7DCuNCJShpFeqIyhQz2qlCjxcXZTjsVkJ1DLkuL2Bn8TzRVSIR0SqXfRqCWaf4LFIcF7hTMJmZkRx39Sf/hgeYgmFk2JQz0xMIKPFRQwcEVwOk+ccQrMERoBvEFCTtwxDEhzcJk0qf9L0BJIi3TGK4zMBIusaYcn4pr1+AKsutchx2CEuDAFvIXVuxuznKHhpXngVW5rw6Bg5GXjCl9NnOxnBELktrnaHTP1wz4SuEmqIfpDY3qzzQVz5qUfPFuTt4+/tiTDHrP9WRk1OaawuIWzDPpKLf9W1+mDj34FEgdfkZFiNCwVtNX35V2n3KFjXruuvJRtakHSFazE+38vo8ucNtcj8gHDe1KB0MW3dyjLaPMZNmALJU81KOWJ+tbk8YjabilhhzAC3AYGYv03KAZRS2IZlctv09B9MFx6zr1+tdjcaiNnUvi7qP83dN4AgKewyuZPKFhdQSmlDRmshYxIuNbFqjw4pDgzcmJTSGi9aozFCto/sY//vURPcN9cRfPgtMV0C/64ewc29uFyV8+g3pjcLlrh8BtLOYHLh2tsyeqLn5ul8/d05TpoETMCEVWjpp1ateTPqUwl+L0Tx2VDhatNXGSzMzMlJX9OmWDk3+w6TtMpK4M4sELv//LpVpjb+mJhb8QwncWxmuU7wJajP8aMeoLQ/evVp3KVOvkqsDgEwiDNGBBYvNcSRYdfulpquce1Yyj07LC27QYdwi0sk1uLcl0rmpt74cIQlItlMXgK2QZi5hYnRICAcaZ2KBsSBGSbILCTOkUiMZIfByZwKm0gQXRINKTc9EPKjxLyKJ1GhRlxOhmqRImlyISOTWqPtS6elt5OjUIb69UVgkOKidFMzMzAXzBqyf+yZmWLHCkcC7///l02QABvYziOkEig4VAJRD2UqYLBJheoCQ1Hy3lKpfcrwjHJQBpoIPzkC4KA4JHyI4UnGZrCEzmEeymI6lqh7MUl6vOSKRymivxGBLD73S87C7Ob8aQKNSILN29CVVRrtkpEb6BhAKWyM9NJBtn2FkmXaRKRQWfTTZubWguFm/CEsVe4Rk/ZThPGxXNaK+xzC0kJ6LMGxIjyeX//+teamyyRL6rlqrStVmK8///////BixDIA2kFZA4IffbwMi3cqwh0RWmLoN9RX5XOSay4tjUwoCYENnXKg8Fhzs+LpUeV+QyHdarTRmD1BVwSGvqxhfzq4SmWS2VzaLqcMbkZhCKSOCMIvsVaaliSJcig9GVIiEkRtNHn79s+WFS06WCNM95/FUc22oEh4rkGJoZyccJ7iuxNomI0a1rpvfheIjynYK0UfeX//6WT/TQsN2krUiHNjGG3W//////wYsQwh+e2mpCqLhm4zxDaknnAbdywbQPWDVc5FWTROH+bcuNOE/44UPsTUEMsxVjlU7G5dE5VDkzXhjGovNwaGLv5H2/lUCS5nEoYHAzwJhIgigaWtMEhk/QoKhmfQBkhD+Eak64LdDBKUYyhlXFkPgyKl3SBNRfaoU41yzyEEGxIMoa9yQ//vURO+J1YdxvxNpF1CrTjfhbSLqFcl/AM0xHALNuN+FtIuqHBZBJhhorReVfaknDxqW5JKxMvcWmHFcDAg9waqJho7IMPSkhTB6f/+JQ4RzKWFBgXHKvGMyOVx6B6clhDaReAGCR2WRuJwxFmlzyYzQwQZHAHo8JGXKokDuE/EO0cpu1PuxaLZLWR9kL4zj6Q/BvbWWF2vefpn4YCYy9l8UgpZMZAVotI88/ste9ShWZgjxfS0SJhgM1BQQyom9q5EvBJVsjcUcQ+1IzBxiM/CJASBeRgqews3BeRCeR022RKOVYiWJRWTuukac53udRdJlJ3kw+EdlGWQ/////8GAimSAtunDity9qr8v87Zf5Z5Z0EDje6j94DaiiQCChKRqXLAmhJetokVB7XqrTDIljNpjWklvJUsdS+fxUzzrFii7oDVKxRyYcgZ4VcxB+oNEXYCU8zKUJQCiUOJNOnwEhShPHUZNREoPpRY6fHTc4XTk4BGIyfMXCpv9NA/nUkUwGP+SJoqpseyVUBJZCqiWPrliYLN+SJqQKgj/ioBTAebVjLfcY1oBQJxVnDo7Sz1j150LPrSK5cuFTLxSGu///iVAH2eldsZk1E2BIZ12dULskosae8HCtAGzAwKLCQsDEgJc5M4vauAEggEKISJp5x48B1YBu3RszwKJMbQ1YErlpT3JyrVeKFoYoquNnrtWlx3Vy+5TPtClbUxVis6NhlRFhCKYrIkUyEUhlYiZWnFJEvSUUIhAKCJ4itNFNYNJswBImIULMmogiwFhLhE1vVZTk/xjKJCJdUBIeCopMz2U/1SFlLioNNnvGKgWACJREAJEssal+iJlr8m1hUTdNCyWV//4KviYhgsjeyEGabMdQxLQq2GMiA5L5FJxrPNwzO7dmWqqpfFxnjaM0tS21S6x5amViS4uMlrVzGJcum2XdOic9CenSwSlTNF3y0cnqYlKhxHUvCNUklnyqibASAUSk57WvNXOXmUxkZNiCWbNH18sueZaWmMD5JElY//vURP6N1gJfvYtMTqTE67eRb0luFxl82gfhh8LFLtpFhDLJISNoQjYJQOiSWZKp8uMhCBsqOT3Gk4NSAAYnLly5atWrSSJLhKJ1cXM0OiUZE6Ayeta041Vp6yGIIIgFHVkEi1RMZU+Jd1K2WO0sMhKWK7sVcJhYACiikK2uo6/sOy3COurFhCAIM2F1cY8pknVAYREitdFHaiqkmqSK1tZcuaJROhWBKB0mmJ6mEo+u17LvNHzNIDKNbEZJxJYoZPkkSRBNSUrMjK9WXDJsxeZgXiCoMpXD0Ox0ToXUxOQz5k9qlJrrK3c/rMoR8yuhWrTkQQIgdJtxxABCl3VrBk7aF06XHSrZxKDVEu2o4iUq4rLya7MqTEFNRTMuMTAwqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq")

[sub_resource type="Theme" id="Theme_glbon"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlkkf"]
bg_color = Color(0.045861, 0.406627, 0.650049, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0352941, 0.0352941, 0.0352941, 0.545098)
border_blend = true
shadow_color = Color(0.189001, 0.402599, 0.444194, 0.858824)
shadow_size = 12

[sub_resource type="Theme" id="Theme_qe12f"]

[sub_resource type="Theme" id="Theme_jix8l"]

[sub_resource type="Theme" id="Theme_8qtwp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dy7ct"]
bg_color = Color(0.389138, 0.440167, 0.86093, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0o4t1"]
bg_color = Color(0.128753, 0.256305, 0.403603, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0k4wn"]
bg_color = Color(0.125763, 0.25138, 0.396433, 1)

[node name="pause" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ena10")

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamMP3_55en5")
volume_db = 24.0
attenuation = 0.105112

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.678431, 1, 1, 0.294118)
layout_mode = 0
offset_left = 2.0
offset_right = 1144.0
offset_bottom = 639.0
texture = ExtResource("3_ena10")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 713.0
offset_top = -9.0
offset_right = 1053.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.918091, 0.918091, 0.918091, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 16
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 14
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_wntjw")
theme_override_font_sizes/font_size = 40
text = "FREAKY LAB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 735.0
offset_top = 81.0
offset_right = 1037.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_glbon")
theme_override_styles/panel = SubResource("StyleBoxFlat_nlkkf")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_qe12f")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_jix8l")
theme_override_constants/separation = 7
alignment = 1

[node name="countinue" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_8qtwp")
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_il0vt")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_dy7ct")
text = "Countinue"

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_il0vt")
theme_override_font_sizes/font_size = 28
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0o4t1")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0k4wn")
text = "Exit"

[node name="Options button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_il0vt")
theme_override_font_sizes/font_size = 28
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0o4t1")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0k4wn")
text = " options"
script = ExtResource("5_ena10")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/countinue" to="." method="_on_countinue_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/countinue" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Options button" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Options button" to="." method="_on_options_button_pressed"]
